--- a/CSS/17_边框和阴影.html
+++ b/CSS/17_边框和阴影.html
@@ -18,6 +18,7 @@
             /* box-shadow: 10px 10px 10px 10px chartreuse; */
             /* 文字阴影 */
             text-shadow: 5px 5px 2px black;
+            text-align: center;
         }
         
         div:hover {
