css 属性书写循序

--- a/CSS/20_双伪元素清除浮动.html
+++ b/CSS/20_双伪元素清除浮动.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- 为什么要清楚浮动：
+            1.父元素没有高度
+            2.浮动影响了后面的元素
+            3.子盒子浮动了
+     -->
     <style>
         div {
             width: 100px;
