--- a/CSS/案例/学成在线/html/index.html
+++ b/CSS/案例/学成在线/html/index.html
@@ -11,7 +11,28 @@
 </head>
 
 <body>
-
+    <div class="header w">
+        <!-- log部分 -->
+        <div class="logo">
+            <img src="../images/logo.png" alt="学成在线">
+        </div>
+        <!-- 导航栏部分(使用a标签和li标签) -->
+        <div class="nav">
+            <ul>
+                <li><a href="#">首页</a></li>
+                <li><a href="#">课程</a></li>
+                <li><a href="#">职业规划</a></li>
+            </ul>
+        </div>
+        <!-- 搜索模块 -->
+        <div class="search">
+            <input type="text" placeholder="请输入关键词" />
+            <button></button>
+        </div>
+        <div class="user">
+            <img src="../images/user.png" alt="user"> qq-ff
+        </div>
+    </div>
 </body>
 
 </html>
